# app_server/controllers/user.controller.js
@@ -45,15 +45,26 @@ var sendEmail = function (res, text, email, subject) {
 module.exports.userGetAll = function (req, res) {
     var query = req.query || {};
 
+    var search = req.query.search;
+    delete req.query.search;
+    if (search)
+        query = {
+            $or: [{
+                email: {
+                    $regex: search, $options: 'i'
+                }
+            }]
+        };
+    else query = {};
     Users.paginate(
-        {},
+        query,
         {
             page: Number(req.query.page),
             limit: Number(req.query.limit)
         },
         function (err, user) {
             if (err)
-                return sendJSONresponse(res, 400, err);
+                return sendJSONresponse(res, 500, err);
             var results = {
                 data: user.docs,
                 total: user.total,
@@ -66,36 +77,67 @@ module.exports.userGetAll = function (req, res) {
     )
 };
 
+module.exports.checkEmailExist = function (req, res) {
+    Users.findOne({email: req.params.email}, function (err, user) {
+        if (err)
+            return sendJSONresponse(res, 500, {
+                success: false,
+                message: err
+            });
+        if (!user)
+            return sendJSONresponse(res, 404, {
+                success: false,
+                message: 'Email is not exist'
+            });
+        sendJSONresponse(res, 200, {
+            success: true,
+            message: 'Successful! ',
+            data: user.email
+        })
+    });
+};
+
 module.exports.login = function (req, res) {
-    Users.findOne(
-        {
-            email: req.body.email
-        },
-        function (err, user) {
-            if (err) {
-                sendJSONresponse(res, 400, err);
-                return;
-            }
-            if (!user) {
-                sendJSONresponse(res, 404, {
-                    success: false,
-                    message: 'Email not founded'
-                });
-                return;
-            }
-            if (!user.validPassword(req.body.passCode))
-                return sendJSONresponse(res, 400,
-                    {
-                        success: false,
-                        message: 'Passcode is wrong'
-                    });
-            sendJSONresponse(res, 200, {
-                success: true,
-                message: 'Login successful!',
-                data: user
+    //  Validate Input
+    req.checkBody('email', 'email value should be not empty').optional().notEmpty();
+    req.checkBody('passCode', 'passCode value should be not empty').optional().notEmpty();
+
+    req.getValidationResult().then(function (result) {
+        if (!result.isEmpty()) {
+            var error = result.useFirstErrorOnly().array()[0].msg;
+            return res.status(400).json({
+                success: false,
+                message: error
             });
         }
-    );
+        Users.findOne(
+            {
+                email: req.body.email
+            },
+            function (err, user) {
+                if (err) {
+                    res.status(500);
+                    return res.send(err);
+                }
+                if (!user) {
+                    res.status(401);
+                    return res.send({success: false, message: 'User not Found'});
+                }
+                if (!user.validPassword(req.body.passCode)) {
+                    res.status(401);
+                    res.send({
+                        success: false,
+                        message: 'Wrong Passcode'
+                    })
+                }
+                sendJSONresponse(res, 200, {
+                    success: true,
+                    message: 'Login successful!',
+                    data: user
+                });
+            }
+        );
+    });
 };
 
 module.exports.forgotPasscode = function (req, res) {
@@ -123,29 +165,92 @@ module.exports.forgotPasscode = function (req, res) {
     });
 };
 
-module.exports.newPasscode = function (req, res) {
+module.exports.verifyPassToken = function (req, res) {
     Users.findOne({email: req.body.email}, function (err, user) {
         if (err)
-            return sendJSONresponse(res, 400, err);
-        if(!user)
+            return sendJSONresponse(res, 500, {
+                success: false,
+                message: err
+            });
+        if (!user)
+            return sendJSONresponse(res, 404, {
+                success: false,
+                message: 'User not Found!'
+            });
+        if (req.body.passToken !== user.passToken)
+            return sendJSONresponse(res, 400, {
+                success: false,
+                message: 'Invalid Pass Token'
+            });
+        var data = {
+            email: user.email,
+            passToken: user.passToken
+        };
+        sendJSONresponse(res, 200, {
+            success: true,
+            message: 'Verify successful! ',
+            data: data
+        })
+    });
+};
+
+module.exports.resetPasscode = function (req, res) {
+    //  Validate Input
+    req.checkBody('passToken', 'passToken value should be not empty').optional().notEmpty();
+
+    req.getValidationResult().then(function (result) {
+        if (!result.isEmpty()) {
+            var error = result.useFirstErrorOnly().array()[0].msg;
+            return res.status(400).json({
+                success: false,
+                message: error
+            });
+        }
+        Users.findOne({email: req.body.email}, function (err, user) {
+            if (err)
+                return sendJSONresponse(res, 400, err);
+            if (!user)
+                return sendJSONresponse(res, 404, {
+                    success: false,
+                    message: 'User not Found'
+                });
+
+            user.setPassword(req.body.passCode);
+            user.passToken = "";
+            user.save(function (err, user) {
+                if (err)
+                    return sendJSONresponse(res, 400, err);
+                sendJSONresponse(res, 200, {
+                    success: true,
+                    message: 'Change passcode successful! '
+                })
+            })
+        });
+    });
+};
+
+module.exports.changePassCode = function (req, res) {
+    Users.findOne({email: req.body.email}, function (err, user) {
+        if (err)
+            return sendJSONresponse(res, 500, {
+                success: false,
+                message: err
+            });
+        if (!user)
             return sendJSONresponse(res, 404, {
                 success: false,
                 message: 'User not Found'
             });
-        if(req.body.passToken !== user.passToken)
+        if (req.body.newPassCode !== req.body.confirmPassCode)
             return sendJSONresponse(res, 400, {
                 success: false,
-                message: 'Invalid verification code'
+                message: 'New passcode must be same as confirm passcode'
             });
-        user.setPassword(req.body.passCode);
-        user.passToken = "";
-        user.save(function (err, user) {
-            if(err)
-                return sendJSONresponse(res, 400, err);
-            sendJSONresponse(res, 200, {
-                success: true,
-                message: 'Change passcode successful! '
-            })
-        })
-    });
+        user.setPassword(req.body.newPassCode);
+        user.save();
+        sendJSONresponse(res, 200, {
+            success: true,
+            message: 'Change passcode successful! '
+        });
+    })
 };
